First Commit and push

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <ul class="list-group" style="padding-left: 20px;">
                 <li>Cells vary in shape and size.</li>
                 <li>Nerve cells have long extensions and can be several centimeters in length.</li>
-                <li>Muscle cells are elongated in shape and.</li>
+                <li>Muscle cells are elongated in shape.</li>
                 <li>The ostrich egg is the largest cell (75mm).</li>
                 <li>Some plant cells have thick walls.</li>
                 <li>There is wide variation in the number of cells among different organisms.</li>
