--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <!-- Open Graph for better social sharing -->
         <meta property="og:title" content="Understanding Cell Structure and Function">
         <meta property="og:description" content="Explore the key aspects of cell biology, from early discoveries to modern cell theory.">
-        <meta property="og:image" content="assets/eLearning_Logo.jpg">
+        <meta property="og:image" content="assets/eLearningLogo.jpg">
         <meta property="og:type" content="website">
         
         <!-- Twitter Card for better social sharing -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Understanding Cell Structure and Function">
         <meta name="twitter:description" content="Explore the key aspects of cell biology, from early discoveries to modern cell theory.">
-        <meta name="twitter:image" content="assets/eLearning_Logo.jpg">
+        <meta name="twitter:image" content="assets/eLearningLogo.jpg">
     
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -55,7 +55,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-primary">
         <a class="navbar-brand lobster-regular" href="#">
-            <img src="assets/eLearning_Logo.jpg" width="40" height="40" class="d-inline-block align-center" alt="eLearning Logo">
+            <img src="assets/eLearningLogo.jpg" width="60" height="60" class="d-inline-block align-center" alt="eLearning Logo">
             eLearning
         </a>
     </nav>
@@ -108,7 +108,7 @@
       "name": "Understanding Cell Structure and Function",
       "description": "Learn about cell structure and function, including early observations, cell theory, and variation in cells. Ideal for students and educators.",
       "url": "https://yourwebsite.com/understanding-cell-structure-and-function",
-      "image": "assets/eLearning_Logo.jpg",
+      "image": "assets/eLearningLogo.jpg",
       "author": {
         "@type": "Person",
         "name": "RG"
