--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       "@type": "WebPage",
       "name": "Understanding Cell Structure and Function",
       "description": "Learn about cell structure and function, including early observations, cell theory, and variation in cells. Ideal for students and educators.",
-      "url": "https://yourwebsite.com/understanding-cell-structure-and-function",
+      "url": "https://elearningweb.github.io/",
       "image": "assets/eLearningLogo.jpg",
       "author": {
         "@type": "Person",
